--- a/WebContent/product/data/style.css
+++ b/WebContent/product/data/style.css
@@ -1,7 +1,158 @@
 @charset "UTF-8";
 
+body{
+	max-width: 1561px;
+    margin: 0 auto;
+    padding-left: 11px;
+    padding-right: 11px;
+    font: 8px 'S-CoreDream-3Light','NeueHaasDisplay','Roboto','Noto Sans KR','Helvetica','Malgun Gothic',sans-serif;
+    color: #555;
+    letter-spacing: 0.6px;
+    background: #fff;
+}
+
 a{
 	text-decoration: none;
-	color: #8e8e8e;
-	font-size: 10pt;
+	color: #484848;
+	font-size: 9pt;
+}
+
+div{
+	margin: 0;
+    padding: 0;
+}
+
+/*  */
+
+#header {
+    position: fixed;
+    top: 20px;
+    width: 100%;
+    max-width: 1561px;
+    height: 36px;
+    z-index: 2000;
+}
+
+.left_area {
+    position: absolute;
+    left: 0px;
+    top: 56px;
+    width: 150px;
+    z-index: 3000;
+}
+
+.top_logo {
+    display: table;
+    z-index: 3000;
+    position: absolute;
+    left: 50%;
+    top: 0px;
+    margin-left: -75px;
+}
+
+.right_area {
+    position: absolute;
+    right: 50px;
+    top: 0px;
+    z-index: 3000;
+}
+
+
+
+#footer {
+    width: 100%;
+    height: 120px;
+    position: relative;
+    margin: 104px auto 30px;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #fff;
+    font-size: 11px;
+    color: #000;
+    line-height: 18px;
+}
+
+#footer .bt_shopinfo {
+    width: 290px;
+    padding: 0;
+    text-align: left;
+    float: right;
+}
+
+#footer .bt_shopinfo2 {
+    width: 305px;
+    padding: 0;
+    text-align: left;
+    float: right;
+}
+
+
+
+#wrap.txt {
+    margin: 106px auto 0;
+}
+
+#wrap {
+    position: relative;
+    width: 100%;
+    margin: 76px auto 0;
+}
+/*  */
+
+
+.detail_wrap{
+	width: 80%;
+	margin: 106px auto 0;
+}
+
+.detail{
+	width: 100%;
+    margin: 0 auto;
+}
+
+.productImage{
+	display: inline-block;
+	width: 50%;
+	padding-right: 20%;
+	
+}
+
+.productMenu{
+	display: inline-block;
+	width: 30%;
+	position: fixed;
+	right: 70px;
+}
+
+h3 {
+	margin: 0;
+    padding: 0;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+
+
+.board{
+}
+
+.board_warp{
+	margin-bottom: 20px;
+}
+
+.board_display{
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	width: 45%;
+	border-color: #484848
+}
+
+.board_button{
+	margin-bottom: 10px;
 }
