--- a/WebContent/product/data/style.css
+++ b/WebContent/product/data/style.css
@@ -119,9 +119,9 @@ div{
 
 .productMenu{
 	display: inline-block;
-	width: 30%;
+	width: 20%;
 	position: fixed;
-	right: 70px;
+	right: 120px;
 }
 
 h3 {
@@ -137,8 +137,76 @@ h3 {
     font-weight: bold;
 }
 
+/* option */
+table{
+	width: 100%;
+	border-spacing: 0;
+    border-collapse: collapse;
+    display: table;
+    box-sizing: border-box;
+    text-indent: initial;
+}
 
+.option{
+	font-size: 10px;
+    margin: 0px 0 0;
+    color: #888;
+    border: 0;
+    float: right;
+    width: 100%;
+    text-align: left;
+}
 
+tbody{
+	display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+.options{
+	border: 0px solid #000;
+    height: 24px;
+    margin-bottom: 10px;
+    background: #F4F4F4;
+    font-size: 10px;
+    cursor: pointer;
+    padding: 0 10px;
+    width: 100%;
+    font-weight: 400;
+    letter-spacing: 0;
+    box-sizing: border-box;
+    text-align-last: center;
+    text-align: center;
+    -ms-text-align-last: center;
+    -moz-text-align-last: center;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    text-transform: none !important;
+}
+
+.displaynone{
+	display: none !important;
+}
+
+/* 장바구니 */
+.add_button{
+	text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+    height: 30px;
+    line-height: 28px;
+    color: #000;
+    background-color: #fff;
+    font-size: 11px;
+    vertical-align: middle;
+    padding: 0;
+    font-weight: 400;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+    display: block;
+}
+
+/* board(Review, Q&A) */
 .board{
 }
 
@@ -156,3 +224,4 @@ h3 {
 .board_button{
 	margin-bottom: 10px;
 }
+
