✨ Insert Product Images
insert product images connecting between DB and jsp

--- a/WebContent/product/data/style.css
+++ b/WebContent/product/data/style.css
@@ -99,10 +99,18 @@ div{
 }
 /*  */
 
+/* list */
+
+.productPrice{
+	
+}
+
+/* detail? */
 
 .detail_wrap{
 	width: 80%;
 	margin: 106px auto 0;
+	
 }
 
 .detail{
