--- a/WebContent/orders/css/cartListStyle.css
+++ b/WebContent/orders/css/cartListStyle.css
@@ -1,5 +1,10 @@
 @charset "EUC-KR";
 
+#content {
+	width: 1000px; 
+	
+}
+
 #cartList {
 	width: 1000px;
 }
@@ -9,6 +14,13 @@
 	padding: 10px 0px 10px 0px;
 }
 
+#paymentBox span {
+	display: inline-block;
+	margin: 10px;
+	
+	
+	
+}
 
 
 
