📝🐛 Update orders page & Fix OrdersServlet
1. Update orders page
cartList, orderPayment, orderComplete, css
2. Fix OrdersServlet
OrdersServlet, orderPayment

--- a/WebContent/orders/css/orderPaymentStyle.css
+++ b/WebContent/orders/css/orderPaymentStyle.css
@@ -52,6 +52,11 @@ label span {
 	outline: none;
 }
 
+.box.text {
+	width: 350px;
+	vertical-align: middle;
+}
+
 input.input-2 {
 	width: 120px;
 	vertical-align: middle;
