--- a/WebContent/css/shopStyle.css
+++ b/WebContent/css/shopStyle.css
@@ -61,9 +61,9 @@ span {
 }
 
 #footer {
+    display: block;
     width: 100%;
     height: 120px;
-    position: relative;
     margin: 104px auto 30px;
     padding: 0;
     box-sizing: border-box;
@@ -98,6 +98,7 @@ span {
     font-size: 11px;
     color: #000;
     line-height: 18px;
+    overflow: auto;
 }
 
 
