--- a/WebContent/orders/css/cartListStyle.css
+++ b/WebContent/orders/css/cartListStyle.css
@@ -23,14 +23,14 @@
 .box.row {
 	margin-top: 10px;
 	display: inline-block;
-	width: 480px; height : 30px;
+	width: 480px;
 	border-bottom: 1px solid #DBDBDB;
 }
 
 .box.row.payment {
 	margin-top: 10px;
 	display: inline-block;
-	width: 300px; height : 200px;
+	width: 300px; height : 100px;
 	border-bottom: 1px solid #DBDBDB;
 }
 
