--- a/WebContent/css/shopStyle.css
+++ b/WebContent/css/shopStyle.css
@@ -101,6 +101,21 @@ span {
     overflow: auto;
 }
 
+.listTable {
+	width: 900;
+	padding: 10px;
+}
+
+.listTable thead th{
+	font-size: 15px;
+	padding: 3px;
+}
+
+.box {
+	display: inline-block;
+	padding: 10px;
+	width: 500px;
+}
 
 
 
