--- a/WebContent/member/css/memberListStyle.css
+++ b/WebContent/member/css/memberListStyle.css
@@ -13,6 +13,14 @@ body {
 }
 
 
+b {
+    text-decoration: none;
+    color: #484848;
+    font-size: 8pt;
+}
+
+
+
 #content {
    width: 1000px; 
    
@@ -51,15 +59,31 @@ td {
 }
 
 .box.row {
-   display: inline-block;
-   width: 480px; height : 30px;
-   border-bottom: 1px solid #DBDBDB;
+   
+   
+   position: relative;
+    display: block;
+    width: 300px;
+    margin: 0 0 24px;
+    padding: 3px 5px 3px 80px;
+    box-sizing: border-box;
+   /*  border-bottom: 1px solid #000; */
+    border-radius: 0;
+    border-bottom: 1px solid #DBDBDB;
+ 	text-decoration: none;
+    color: #484848;
+    font-size: 8pt;
+ 
+ 
 }
 
 .box.label {
-   width: 80px;
-   vertical-align: middle;
-  	font-size: 12px;
+  text-decoration: none;
+    color: #000000;
+    font-size: 8pt;
+  font-style: italic;
+  text-align: left;
+  
 }
 
 label span {
@@ -69,6 +93,7 @@ label span {
    width: 300px;
    vertical-align: middle;
    font: 8px 'S-CoreDream-3Light','NeueHaasDisplay','Roboto','Noto Sans KR','Helvetica','Malgun Gothic',sans-serif;
+   height: 20px;
 }
 
 .box.op {
@@ -108,19 +133,24 @@ input.input-2 {
    float: right;
 }
 
+input::-webkit-input-placeholder {
+ text-decoration: none;
+    color: #484848;
+    font-size: 8pt;
+  font-style: italic;
+  text-align: left;
+}
+
+
+
+
 .botton {
-    float: left;
-    position: relative;
-    box-sizing: border-box;
-    width: 440px;
-    padding: 0 72px;
-    margin-bottom: 18px;
-    border: 1px solid #000;
-    font-weight: 400;
-    font-size: 11px;
-    height: 64px;
-    line-height: 64px;
-    text-align: center;
+cursor: pointer;
+    margin-top: 10px;
+    border: 1px solid rgb(189, 189, 189);
+    background-color: white;
+    width: 200px;
+    line-height: 48px;
 }
 .box.botton {
    width: 300px;
@@ -140,3 +170,7 @@ input.input-2 {
         color: white;
         background-color: ;
     }
+    
+    
+    
+    
