--- a/WebContent/member/css/style.css
+++ b/WebContent/member/css/style.css
@@ -15,3 +15,12 @@ ul.join_box{border: 1px solid #ddd;background-color: #fff;}
 .footBtwrap>li>button{display: block; width: 100%;height: 100%; font-size: 20px;text-align: center;line-height: 60px;}
 .fpmgBt1{width: 30%;height: 60px;background-color: #fff;color:#888;border-color: #eee;}
 .fpmgBt2{width: 30%;height: 60px;background-color: black;color: #fff; border-color: #eee; }
+
+b{
+	 
+    text-decoration: none;
+    color: #484848;
+    font-size: 8pt;
+
+	
+}
