--- a/WebContent/boards/css/view.css
+++ b/WebContent/boards/css/view.css
@@ -1,1 +1,51 @@
-@charset "UTF-8";
+.boardList {
+    margin: 20px auto 0;
+}
+
+.boardTitle {
+    font-weight: 700;
+    font: 14px'S-CoreDream-3Light','NeueHaasDisplay','Roboto','Noto Sans KR','Helvetica','Malgun Gothic',sans-serif;
+	color: #555;
+    margin-bottom: 30px;
+}
+
+table {
+	width: 100%;
+}
+
+table td {
+	padding: 8px 10px 7px 0!important;
+}
+
+.name {
+	display: inline;
+	font-weight: 700;
+	padding-right: 10pt;
+}
+
+p {
+	display: inline;
+	font-weight: 400;
+	padding-left: 5pt;
+}
+
+.boardContent {
+	border-top: 1px solid #dfdfdf;
+	border-bottom: 1px solid #dfdfdf;
+	padding: 20px 30px 30px;
+	width: 600px;
+	color: #484848;
+}
+
+.viewTitle{
+	font-size: 12pt;
+}
+
+.viewContent{
+	min-height: 120px;
+}
+
+.element{
+	display: inline;
+	font-weight: 700;
+}
