--- a/WebContent/css/shopStyle.css
+++ b/WebContent/css/shopStyle.css
@@ -6,11 +6,10 @@ a {
     font-size: 8pt;
     margin: 0;
     padding: 0;
-  
-    
-    
+  	font-style: inherit;
+   display : inherit;
 }
-}
+
 
 body {
 	max-width: 1561px;
