--- a/WebContent/member/css/memberListStyle.css
+++ b/WebContent/member/css/memberListStyle.css
@@ -81,7 +81,7 @@ td {
   text-decoration: none;
     color: #000000;
     font-size: 8pt;
-  font-style: italic;
+  font-style: normal;
   text-align: left;
   
 }
