--- a/WebContent/member/css/memberListStyle.css
+++ b/WebContent/member/css/memberListStyle.css
@@ -96,6 +96,20 @@ label span {
    height: 20px;
 }
 
+
+.update.input {
+   width: 300px;
+   vertical-align: middle;
+   font: 8px 'S-CoreDream-3Light','NeueHaasDisplay','Roboto','Noto Sans KR','Helvetica','Malgun Gothic',sans-serif;
+   height: 20px;
+   border-top: 1px solid #DBDBDB; 
+   border-bottom: 1px solid #DBDBDB; 
+   border-left:1px solid #DBDBDB; 
+   border-right: 1px solid #DBDBDB;"
+   
+   
+}
+
 .box.op {
    width: 100px;
    vertical-align: middle;
