--- a/WebContent/css/shopStyle.css
+++ b/WebContent/css/shopStyle.css
@@ -7,7 +7,7 @@ a {
     margin: 0;
     padding: 0;
   	font-style: inherit;
-   display : inherit;
+  
 }
 
 
@@ -92,11 +92,12 @@ b {
 
 
 #header .left_area {
-    position: absolute;
-    left: 0px;
-    top: 56px;
-    width: 150px;
-    z-index: 3000;
+   text-decoration: none;
+    color: #484848;
+    font-size: 8pt;
+    margin: 0;
+    padding: 0;
+  	font-style: inherit;
 }
 
 #header .top_logo {
