--- a/WebContent/member/css/style.css
+++ b/WebContent/member/css/style.css
@@ -1,4 +1,4 @@
-*{margin: 0;padding: 0;box-sizing: border-box}
+*{margin: 0;padding: 0;}
 body{background-color: #f7f7f7;}
 ul>li{list-style: none}
 a{text-decoration: none;}
