--- a/WebContent/product/data/style.css
+++ b/WebContent/product/data/style.css
@@ -13,8 +13,11 @@ body{
 
 a{
 	text-decoration: none;
-	color: #484848;
-	font-size: 10pt;
+    color: #484848;
+    font-size: 8pt;
+    margin: 0;
+    padding: 0;
+  	font-style: inherit;
 }
 
 div{
@@ -46,11 +49,12 @@ li{
 }
 
 .left_area {
-    position: absolute;
-    left: 0px;
-    top: 56px;
-    width: 150px;
-    z-index: 3000;
+     text-decoration: none;
+    color: #484848;
+    font-size: 8pt;
+    margin: 0;
+    padding: 0;
+  	font-style: inherit;
 }
 
 .top_logo {
