--- a/WebContent/member/css/memberListStyle.css
+++ b/WebContent/member/css/memberListStyle.css
@@ -51,12 +51,25 @@ b {
 #userId{
 	
 	display: inline-block;
-    width: 200px;
+    width: 100px;
     font-size: 13px;
     border: none;
     float: left;
     outline: none;
+    margin-left: 30px;
 }
+
+#userPwd{
+	display: inline-block;
+    width: 100px;
+    font-size: 13px;
+    border: none;
+    float: left;
+    outline: none;
+    margin-left: 30px;
+	
+}
+
 
 #userName {
 	
