--- a/WebContent/member/css/member.css
+++ b/WebContent/member/css/member.css
@@ -46,7 +46,7 @@
 
 .box.input {
    /* height: 25px; */
-   width: 40%;
+   width: 60%;
    text-align: left;
    display: inline-block;
    vertical-align: middle;
@@ -204,7 +204,8 @@ li{
 }
 
 .inputStyle{
-	font: 9pt 'S-CoreDream-3Light','NeueHaasDisplay','Roboto','Noto Sans KR','Helvetica','Malgun Gothic',sans-serif;
+	font: 9pt;
+	font-style: italic;
 	display: inline-block;
     width: 100px;
     border: none;
@@ -218,3 +219,16 @@ li{
 	float: left;
 	/* margin-left: 200px; */
 }
+
+/* search */
+.findButton{
+	height: 70px;
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+.findResult{
+	width: 300px;
+}
+
+
