--- a/WebContent/orders/css/orderPaymentStyle.css
+++ b/WebContent/orders/css/orderPaymentStyle.css
@@ -1,74 +1,242 @@
-@charset "EUC-KR";
+@charset "UTF-8";
 
-#content {
-	width: 1000px; 
-	
+.button{
+	height: 70px;
+	margin-top: 10px;
 }
 
-#cartList {
-	width: 1000px;
+.search a{
+	text-decoration: none;
+	color: #484848;
+	font-size: 8px;
 }
 
-#cartList td {
-	height: 100px;
-	padding: 10px 0px 10px 0px;
+.loginForm{
+	margin-top: 90px;
 }
 
-#paymentBox{
-	display: inline-block;
-	padding-right: 20px;
-	
+#left_area{
+	width: 350px;
 }
 
-#paymentBox div {
-	display: inline-block;
-	margin: 5px;
+.box.row {
+   position: relative;
+   display: block;
+   box-sizing: border-box;
+   color: #484848;
+   border: none;
+   border-bottom: 1px solid #ddd;
+   margin: 10px;
+}
+
+/* .box {
+   display: inline-block;
+   padding: 10px;
+   width: 500px;
+} */
+
+.box.label {	
 	width: 100px;
-}
-
-td {
-	width: 130px;
-}
-
-.box.label {
-	width: 80px;
-	vertical-align: middle;
-}
-
-label span {
-	
+    text-align: left;
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    vertical-align: middle;
 }
 
 .box.input {
-	width: 350px;
-	vertical-align: middle;
-}
-
-.input input {
-	display: inline-block;
-	width: 344px;
-	border: 1px solid #DDDDDD;
-	float: left;
-	outline: none;
+   /* height: 25px; */
+   width: 60%;
+   text-align: left;
+   display: inline-block;
+   vertical-align: middle;
 }
 
 .box.text {
-	width: 350px;
+   /* height: 25px; */
+   width: 60%;
+   text-align: left;
+   display: inline-block;
+   vertical-align: middle;
+}
+
+.update_area{
+	width: 100%;
+}
+
+/* terms.jsp */
+.terms_bx_list {
+    margin-top: 4px;
+    float: left;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    -webkit-text-size-adjust: none;
+}
+
+li{
+	margin: 0;
+    padding: 0;
+    -webkit-text-size-adjust: none;
+}
+
+.terms_bx {
+    display: block;
+    padding-top: 30px;
+}
+
+.chk{
 	vertical-align: middle;
 }
 
-input.input-2 {
-	width: 120px;
+.input_chk {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+}
+
+.input_chk label {
+    position: relative;
+    /* display: block; */
+    width: 100%;
+    padding-left: 15px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 21px;
+    cursor: pointer;
+    color: #333;
+    box-sizing: border-box;
+}
+
+.terms_box {
 	vertical-align: middle;
-	padding-right: 30px;
+    position: relative;
+    overflow: auto;
+    height: 88px;
+    margin-top: 8px;
+    padding: 12px;
+    border: 1px solid #dadada;
+    background: #fff;
+    box-sizing: border-box;
+    scrollbar-base-color: #d9d9d9;
+    scrollbar-arrow-color: #8e8e8e;
+    scrollbar-3dlight-color: #d9d9d9;
+    scrollbar-darkshadow-color: #d9d9d9;
+    scrollbar-face-color: #d9d9d9;
+    scrollbar-highlight-color: #d9d9d9;
+    scrollbar-shadow-color: #d9d9d9;
+    scrollbar-track-color: #f2f2f2;
+    -webkit-overflow-scrolling: touch;
 }
 
-.input-2.button {
-	padding: 2px 5px 2px 5px;
-	float: right;
-	background-color: #FFFFFF;
-	border: 1px solid #666666;
+.article:first-child {
+    margin-top: 0;
 }
 
+.terms_box .article {
+    font-size: 12px;
+    line-height: 16px;
+    color: #666;
+}
+
+.article {
+    margin-top: 15px;
+    font-size: 12px;
+    line-height: 16px;
+    color: #666;
+}
+
+.article .article__title {
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 16px;
+    padding-bottom: 8px;
+    color: #666;
+}
+
+.selectAgree{
+	padding-top: 30px;
+}
+
+
+
+/* join */
+.join_wrap{
+	width: 400px;
+}
+
+.add_button {
+    /* text-align: center;
+    width: 100px;
+    box-sizing: border-box;
+    height: 30px;
+    line-height: 28px;
+    background-color: #fff;
+    font-size: 13px;
+    vertical-align: middle;
+    padding: 0;
+    font-weight: 400;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+    display: block;
+    float: left; */
+    border: 1px solid rgb(189, 189, 189);
+    background-color: white;
+    line-height: 48px;
+    font-size: 8pt cursor: pointer;
+    margin-top: 10px;
+    border: 1px solid rgb(189, 189, 189);
+    background-color: white;
+    width: 200px;
+    line-height: 48px;
+}
+
+.joinTitle {
+    font-weight: 700;
+    font: 13px'S-CoreDream-3Light','NeueHaasDisplay','Roboto','Noto Sans KR','Helvetica','Malgun Gothic',sans-serif;
+    color: #555;
+    margin-bottom: 30px;
+}
+
+.joinLabel{
+	width: 100px;
+	text-align: left;
+	display: inline-block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	vertical-align: middle;
+}
+
+.inputStyle{
+	font: 9pt;
+	font-style: italic;
+	display: inline-block;
+    width: 100px;
+    border: none;
+    float: left;
+    outline: none;
+}
+
+.join_button{
+	border: black;
+	width: 100px;
+	float: left;
+	/* margin-left: 200px; */
+}
+
+/* search */
+.findButton{
+	height: 70px;
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+.findResult{
+	width: 300px;
+}
 
 
