--- a/WebContent/css/shopStyle.css
+++ b/WebContent/css/shopStyle.css
@@ -140,7 +140,7 @@ b {
 #footer {
     display: block;
     width: 100%;
-    height: 120px;
+    height: 100px;
     margin: 104px auto 30px;
     padding: 0;
     box-sizing: border-box;
@@ -170,7 +170,7 @@ b {
     max-width: 1100px;
     z-index: 1000;
     margin: 104px auto 30px;
-    padding: 0;
+    padding: 5px;
     box-sizing: border-box;
     font-size: 11px;
     color: #000;
